kustomize/base/piko-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piko-proxy
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: piko01-piko
                port:
                  name: proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piko-upstream
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-service
                port:
                  number: 80
